# ml-vision-lab

./: .dvcignore  .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: create-project.yml
core/: README.md  exceptions.py
core/data/: README.md  __init__.py
core/data/datasets/: README.md  base.py
core/data/loaders/: README.md  base.py
core/data/monitoring/: README.md  base.py
core/data/samplers/: README.md  base.py
core/data/transforms/: README.md  base.py
core/models/: README.md
core/models/architectures/: README.md
core/models/backbones/: README.md
core/models/blocks/: README.md
core/models/heads/: README.md
core/models/versioning/: README.md
core/pipelines/: README.md
core/pipelines/deployment/: README.md
core/pipelines/evaluation/: README.md
core/pipelines/inference/: README.md
core/pipelines/training/: README.md
core/utils/: README.md
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/development/: README.md
docs/development/standards/: code-style.md
docs/development/workflow/: git.md  testing.md
docs/guides/: README.md
docs/guides/best-practices/: ml-development.md
docs/guides/deployment/: README.md
docs/guides/getting-started/: create-project.md  environment.md  installation.md
food-classification/configs/: data.yaml  model.yaml  train.yaml
food-classification/requirements/: base.txt  dev.txt  ui.txt
food-classification/scripts/: predict.py  train.py
food-classification/src/data/: dataset.py  transforms.py
food-classification/src/models/: efficientnet.py
food-classification/src/utils/: metrics.py  visualization.py
food-classification/ui/streamlit/pages/: predict.py
projects/: README-template.md  README.md
projects/food-classification/: .dvcignore  .env.example  .gitignore  README.md  pyproject.toml
projects/food-classification/configs/: data.yaml  model.yaml  train.yaml
projects/food-classification/requirements/: base.txt  dev.txt  ui.txt
projects/food-classification/scripts/: evaluate.py  predict.py  train.py
projects/food-classification/src/data/: dataset.py  transforms.py
projects/food-classification/src/models/: model.py
projects/food-classification/src/utils/: metrics.py  visualization.py
projects/food-classification/tests/: conftest.py  test_data.py  test_models.py
projects/food-classification/ui/streamlit/: app.py
projects/food-classification/ui/streamlit/pages/: predict.py
