[tool.poetry]
name = "food-classification"
version = "0.1.0"
description = "A food classification model pipeline using Food-101 dataset, built with PyTorch and MLflow, featuring a Streamlit UI for inference."

[tool.poetry.dependencies]
python = "^3.11"
# Non-CUDA hardware - use CPU only
torch = {version = ">=2.4.0", extras = ["cpu"]}
torchvision = { version = ">=0.19.0", extras = ["cpu"] }
# Uncomment the following lines to leverage GPU with CUDA
# torch = "^2.4.0"
# torchvision = "^0.19.0"
numpy = "^2.2.2"
pyyaml = "^6.0.2"
pillow = "^11.1.0"

[tool.poetry.group.ui.dependencies]
streamlit = "^1.41.1"
# protobuf = "<4.0.0"  # Prevent conflict with TensorFlow

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.1.0"
dvc = "^3.59.0"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88

[tool.black]
target-version = ["py311"]
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.11"
strict_equality = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
junit_family = "xunit2"
